Refactor core multi-tenant architecture: Tenant & Organization stabilized